[project]
name = "tts9000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "langdetect>=1.0.9",
    "mistralai>=2.4.4",
    "mutagen>=1.47.0",
    "python-telegram-bot>=22.7",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]
