[project]
name = "tts9000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ffmpeg-python>=0.2.0",
    "ftfy>=6.3.1",
    "langdetect>=1.0.9",
    "mistralai>=2.4.4",
    "pylint>=4.0.5",
    "python-telegram-bot>=22.7",
    "requests>=2.33.1",
]
